# parallel-algorithms-labs

lab1/: CMakeLists.txt  README.md  main.cpp  quick_sort_par.cpp  quick_sort_par.h  quick_sort_par_theory_optimal.cpp  quick_sort_seq.cpp  quick_sort_seq.h
lab2/: CMakeLists.txt  README.md  bfs_par.h  bfs_seq.h  cubic_vertex.cpp  cubic_vertex.h  main.cpp  vertex.h
